fix(website): allow topnav to wrap and reduce link spacing
Remove white-space:nowrap and overflow from #main-nav so language links
wrap naturally when they exceed one row. Reduce link padding from 15px
to 8px to fit more items per line.

--- a/website/themes/icarus/source/css/_partial/header.styl
+++ b/website/themes/icarus/source/css/_partial/header.styl
@@ -66,16 +66,16 @@ $header-block-right
         display: none
 
 #main-nav
-    height: header-sub-height
+    min-height: header-sub-height
     line-height: header-sub-height
     padding: 0 15px
-    overflow-x: auto
-    overflow-y: hidden
-    white-space: nowrap
     .main-nav-link
         float: none
         display: inline-block
         line-height: header-sub-height
+        padding: 0 8px
+    .main-nav-link:first-child
+        padding-left: 15px
     @media mq-mobile
         display: none
     @media mq-mini
